2003-10-15 Eric Sandall <eric [at] sandall [dot] us>
	* src/services/config/ConfigService.cpp: Fix an ambiguous overload
	(needing typecasting to std::string)
	* src/services/font/Font.cpp: Tried to use assert() without including
	assert.h

2003-09-28 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* resources.cfg: added file: OgreCore.zip
	* Serverservice.h: added declaration for TOUCH command
	* ogre/media: media cleanup. No ogre media will be here
	from now on: resources.cfg will reference the Ogre media
	in the Ogre install directory.
	* /src/components/ogre/Makefile.am: removed the cal3d
	to Ogre converter, this app will no longer be here. 
	All models will be converted from Cal3d to Open Model
	Format and then to Ogre, all of this outside Dime.
	(also, we don't need the cal3d library anymore,
	until we add a component that uses it, like Crystalspace).
	
2003-09-15 Damien McGinnes
	* configure.ac: fixed libxml config check

2003-09-07 Martin Pollard <circlemaster [at] blueyonder [dot] co [dot] uk>
	* configure.ac: changed libxml to pkg-config check - untested so if
	it breaks, please fix.

>>>>>>> 1.51
2003-09-07 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* ServerService: added touch operation

2003-09-04 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* configure.ac: pumped up atlas version req to 0.5
	* ServerService: added support for character creation
	* DimeOgre: bound key "5" to character creation
	* plugins.cfg: re-added this file
	* TODO: added todo list

2003-08-26 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* configure.ac: pumped up eris version to eris-1.2 
	(Eris 0.9.8)

2003-06-23 Miguel Guzman <aglanor [at] telefonica [dot] net>
        * Cal3DConverter: converts Cal3D materials to Ogre
        materials, and assigns material and texture mapping
	to the Ogre mesh accordingly.

2003-05-10 James Turner <james at worldforge dot org>
	* Allow the prefix where Cal3d is installed to too